--- a/css/index-N2tkTU4j.css
+++ b/css/index-N2tkTU4j.css
@@ -134,7 +134,7 @@ table {
     font-family: IBM Plex Mono, monospace;
     font-weight: 200;
     --bg: #000000;
-    --border: #8B0000;
+    --border: #0d200a;
     --text: #FFFFFF;
     --prompt-default: #FFFFFF;
     --prompt-1: #FFFFFF;
